--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
   "useTabs": false,
   "semi": true,
   "singleQuote": true,
+  "trailingComma": "es5",
+  "proseWrap": "always", 
   "plugins": ["prettier-plugin-tailwindcss"]
 }
