--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/css": "^11.13.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.52.1",
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
@@ -16,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "swiper": "^11.1.10",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
