--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.52.1",
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
+    "firebase": "^10.13.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
