--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.52.1",
     "axios": "^1.7.5",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "firebase": "^10.13.0",
+    "firebase-admin": "^12.4.0",
+    "firebase-functions": "^5.1.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
