--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.52.1",
-    "axios": "^1.7.5",
+    "@uiw/react-markdown-preview": "^5.1.2",
+    "@uiw/react-md-editor": "^4.0.4",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "firebase": "^10.13.0",
     "firebase-admin": "^12.4.0",
     "firebase-functions": "^5.1.1",
     "next": "14.2.5",
+    "next-remove-imports": "^1.0.12",
+    "next-transpile-modules": "^10.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-select": "^5.8.0",
     "swiper": "^11.1.10",
     "tailwind-merge": "^2.4.0"
   },
