--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase-admin": "^12.4.0",
     "firebase-functions": "^5.1.1",
     "formidable": "^3.5.1",
+    "html-react-parser": "^5.2.0",
     "next": "14.2.5",
     "next-remove-imports": "^1.0.12",
     "next-transpile-modules": "^10.0.1",
