--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "firebase": "^10.13.0",
     "firebase-admin": "^12.4.0",
     "firebase-functions": "^5.1.1",
-    "formidable": "^3.5.1",
+    "formidable": "^3.5.2",
     "html-react-parser": "^5.2.0",
     "next": "14.2.5",
     "next-remove-imports": "^1.0.12",
@@ -36,6 +36,7 @@
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
