chore: Pages Router 파일들 제거 및 TypeScript 설정 업데이트 (#1)
- src/pages/ 디렉토리 완전 제거
- App Router와 Pages Router 충돌 해결
- Next.js 15 App Router에 맞게 tsconfig.json 자동 업데이트

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,12 +24,18 @@
     "types": [
       "@emotion/react/types/css-prop"
     ],
-    "target": "ES2017"
+    "target": "ES2017",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
-    "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
