--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "19.1.13",
@@ -43,11 +44,10 @@
     "eslint": "^8",
     "eslint-config-next": "15.5.3",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-tailwindcss": "^3.17.4",
-    "postcss": "^8",
+    "postcss": "^8.5.6",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.1",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.13",
     "typescript": "^5"
   },
   "overrides": {
