feat: ESLint tailwind 설정 초기화, globals.css 구버전 삭제 (#3)
- ESLint 설정 업데이트
- 중복된 globals.css 파일 제거 (app 디렉토리로 이동됨)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,39 +1,15 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "prettier",
-    "plugin:tailwindcss/recommended"
-  ],
-
+  "extends": ["next/core-web-vitals", "next/typescript"],
   "rules": {
-    "tailwindcss/classnames-order": [
+    "prefer-const": "warn",
+    "no-var": "error",
+    "no-console": "warn",
+    "no-debugger": "warn",
+    "@typescript-eslint/no-unused-vars": [
       "warn",
       {
-        "callees": ["cva", "cn"]
-      }
-    ],
-    "tailwindcss/enforces-negative-arbitrary-values": [
-      "warn",
-      {
-        "callees": ["cva", "cn"]
-      }
-    ],
-    "tailwindcss/enforces-shorthand": [
-      "warn",
-      {
-        "callees": ["cva", "cn"]
-      }
-    ],
-    "tailwindcss/no-contradicting-classname": [
-      "warn",
-      {
-        "callees": ["cva", "cn"]
-      }
-    ],
-    "tailwindcss/no-custom-classname": [
-      "warn",
-      {
-        "callees": ["cva", "cn"]
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_"
       }
     ]
   }
