--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase-admin": "^12.4.0",
     "firebase-functions": "^6.5.0",
     "formidable": "^3.5.2",
+    "framer-motion": "^12.23.22",
     "html-react-parser": "^5.2.0",
     "next": "15.5.4",
     "next-remove-imports": "^1.0.12",
